# InDesign-Plugin-Manager-Dashboard

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
